<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stepTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:text="@string/step_text"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/distanceTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:text="@string/distance_text"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/input_sensitivity_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity_text"
            android:textSize="20dip" >
        </TextView>

        <Spinner
            android:id="@+id/input_sensitivity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sensitivity_hint"
            android:prompt="@string/sensitivity" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal" >

        <ToggleButton
            android:id="@+id/StartStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="64dip"
            android:minWidth="96dip"
            android:textOff="Start Pedometer"
            android:textOn="Stop Pedometer" >
        </ToggleButton>
    </LinearLayout>

</RelativeLayout>